# gitbranchtool

./: .gitignore  README.md  RELEASE.md  build.py  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
assets/: README.md
packaging/macos/: generate_dmg_background.py  make_dmg.sh
packaging/pyinstaller/: GitPullSwitchTool_macos.spec  GitPullSwitchTool_windows.spec
packaging/windows/: GitPullSwitchTool-Sausage.iss  GitPullSwitchTool.iss
scripts/: build_macos.sh  build_macos_dual.sh  build_windows.ps1  build_windows_dual.ps1  compose_icon_from_reference_layout.py  enhance_app_icon.py  fix_pythonorg_framework_reloc.py  inno_setup.ps1  macos_build_icns.sh  package_windows_zip.py  sync_version.py
src/git_gui/: __init__.py  main.py
src/git_gui/bundle_data/: config.embedded.yaml  sausage_projects.yaml
src/git_gui/config/: constants.py  settings.py
src/git_gui/core/: git_clone.py  git_manager.py  project_manager.py  update_service.py
src/git_gui/core/update/: __init__.py  check_messages.py  release_checker.py  update_controller.py  update_errors.py  update_installer.py  update_throttle.py
src/git_gui/models/: project.py  repository.py
src/git_gui/ui/: main_window.py
src/git_gui/ui/components/: branch_favorite_dialog.py  clone_project_dialog.py  (+9 more)
src/git_gui/utils/: __init__.py  build_channel.py  credential_store.py  file_utils.py  github_issue.py  github_rate_limit.py  github_release.py  github_repo_config.py  logger.py  runtime_paths.py  subprocess_helpers.py  thread_pool.py
tests/: test_github_release.py
(+8 files in other folders)
