[project]
name = "git-gui-pull-switch-tool"
version = "1.0.0"
description = "Git 本地拉线切线 GUI 工具 - PySide6 实现"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "GitPython>=3.1.0",
]

[project.scripts]
git-gui-tool = "src.git_gui.main:main"

[tool.pyinstaller]
name = "GitPullSwitchTool"
onefile = true
windowed = true
icon = "assets/icon.ico"  # 可后续添加
# macOS Universal2 支持通过 --target-arch universal2
