[project]
name = "git-gui-pull-switch-tool"
version = "1.0.5"
description = "Git 本地拉线切线 GUI 工具 - PySide6 实现"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "keyring>=24.0.0",
    "psutil>=5.9.0",
    "GitPython>=3.1.0",
]

[project.scripts]
git-gui-tool = "src.git_gui.main:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[tool.pyinstaller]
name = "GitPullSwitchTool"
onefile = true
windowed = true
icon = "assets/icon.ico"
# 正式构建请使用 packaging/pyinstaller/*.spec；macOS Universal2 需在双架构 Python 下设置 target_arch
